objects/ssot__Account__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountBusinessType__c</fullName>
        <label>Account Business Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountNumber__c</fullName>
        <label>[DoNotUse]Account Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountOwnershipType__c</fullName>
        <label>Account Ownership Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountRatingType__c</fullName>
        <label>Account Rating Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountServiceEntitlements__c</fullName>
        <label>AccountServiceEntitlements relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountSource__c</fullName>
        <label>Account Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountTypeId__c</fullName>
        <label>Account Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountWebsiteURL__c</fullName>
        <label>Account Website URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Account_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Account_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Account_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Account_PartyId_map_Individual_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_PartyId_map_Individual_Id_N_1</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Account_PartyId_map_Individual_Id_N_1</relationshipLabel>
        <relationshipName>Account_PartyId_map_Individual_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Account_PartyId_map_Party_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_PartyId_map_Party_Id_N_1</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>Account_PartyId_map_Party_Id_N_1</relationshipLabel>
        <relationshipName>Account_PartyId_map_Party_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AlternateName__c</fullName>
        <label>Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AnnualRevenueAmount__c</fullName>
        <label>Annual Revenue Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssignTerritoryFlag__c</fullName>
        <label>Assign Territory Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AutoPayEnabledFlag__c</fullName>
        <label>Auto Pay Enabled Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AutoPaymentAmountCurrency__c</fullName>
        <label>Auto Payment Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AutoPaymentAmount__c</fullName>
        <label>Auto Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AutoPaymentMethodId__c</fullName>
        <label>Auto Payment Method</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmountCurrency__c</fullName>
        <label>Balance Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmountLimitCurrency__c</fullName>
        <label>Balance Amount Limit Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmountLimit__c</fullName>
        <label>Balance Amount Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceAmount__c</fullName>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceUnitOfMeasureCurrencyId__c</fullName>
        <label>Balance Unit Of Measure Currency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceUnitOfMeasureCurrency__c</fullName>
        <label>[DoNotUse]Balance Unit OfMeasureCurrency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BalanceUnitOfMeasureId__c</fullName>
        <label>Balance Unit Of Measure</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillContactAddressId__c</fullName>
        <label>Bill Contact Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillDeliveryMethodId__c</fullName>
        <label>Bill Delivery Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillDeliveryMethod__c</fullName>
        <label>[DoNotUse]Bill Delivery Method</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillFrequency__c</fullName>
        <label>Bill Frequency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessUnitId__c</fullName>
        <label>Business Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointAddressId__c</fullName>
        <label>Contact Point Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointAppId__c</fullName>
        <label>Contact Point App</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointLocationId__c</fullName>
        <label>Contact Point Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointPhoneId__c</fullName>
        <label>Contact Point Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointSocialId__c</fullName>
        <label>Contact Point Social</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreditLimitAmount__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreditRatingType__c</fullName>
        <label>Credit Rating Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultFreightTermsId__c</fullName>
        <label>Default Freight Terms</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultFreightTerms__c</fullName>
        <label>[DoNotUse]Default Freight Terms</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultPriceBookId__c</fullName>
        <label>Default Price Book</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaxPhoneId__c</fullName>
        <label>Fax Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FixedFundingOverdrawPercent__c</fullName>
        <label>Fixed Funding Overdraw Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GeneralLedgerAccountId__c</fullName>
        <label>General Ledger Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HoldStatusReasonId__c</fullName>
        <label>Hold Status Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HoldStatusReason__c</fullName>
        <label>[DoNotUse]Hold Status Reason</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Account Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCreditBlocked__c</fullName>
        <label>Credit Blocked</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsCustomer__c</fullName>
        <label>Is Customer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastActivityDate__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastVisitDate__c</fullName>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextInteractionDate__c</fullName>
        <label>Next Interaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NextReviewDate__c</fullName>
        <label>Next. Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NinetyDayBalanceAmountCurrency__c</fullName>
        <label>Ninety Day Balance Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NinetyDayBalanceAmount__c</fullName>
        <label>Ninety Day Balance Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Number__c</fullName>
        <label>Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHours__c</fullName>
        <label>[DoNotUse]Operating Hours</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderDeliveryMethodId__c</fullName>
        <label>Order Delivery Method</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrderDeliveryMethod__c</fullName>
        <label>[DoNotUse]Order Delivery Method</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OrganizationId__c</fullName>
        <label>Organization</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAccountId__c</fullName>
        <label>Parent Account</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyObject__c</fullName>
        <label>Party Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyRoleId__c</fullName>
        <label>Party Role</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyWebAddressId__c</fullName>
        <label>Party Web Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryIndustry__c</fullName>
        <label>Primary Industry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimarySalesContactPointId__c</fullName>
        <label>Primary Sales Contact Point</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimarySalesRepId__c</fullName>
        <label>Primary Sales Rep</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProfileImageUrl__c</fullName>
        <label>Profile Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RateBasedFundingOverdrawPercent__c</fullName>
        <label>Rate Based Funding Overdraw Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewFrequencyText__c</fullName>
        <label>Review Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SLATypeId__c</fullName>
        <label>SLA Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SLAType__c</fullName>
        <label>[DoNotUse]SLA Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesPhoneId__c</fullName>
        <label>Sales Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingAddressId__c</fullName>
        <label>Shipping Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingContactId__c</fullName>
        <label>Shipping Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingEmailId__c</fullName>
        <label>Shipping Email</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingPhoneid__c</fullName>
        <label>Shipping Phone</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SixtyDayBalanceAmountCurrency__c</fullName>
        <label>Sixty Day Balance Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SixtyDayBalanceAmount__c</fullName>
        <label>Sixty Day Balance Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDateTime__c</fullName>
        <label>Source System Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TaxPaymentJurisdictionCode__c</fullName>
        <label>Tax Payment Jurisdiction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThirtyDayBalanceAmountCurrency__c</fullName>
        <label>Thirty Day Balance Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThirtyDayBalanceAmount__c</fullName>
        <label>Thirty Day Balance Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TradeClassificationType__c</fullName>
        <label>Trade Classification Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UseAsBillingAccount__c</fullName>
        <label>Use As Billing Account</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UseAsSalesAccount__c</fullName>
        <label>Use As Sales Account</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UseAsServiceAccount__c</fullName>
        <label>Use As Service Account</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UseAsShippingAccount__c</fullName>
        <label>Use As Shipping Account</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WebsiteAddr__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isInternal__c</fullName>
        <label>is Internal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isPartner__c</fullName>
        <label>is Partner</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isSeller__c</fullName>
        <label>Is Seller</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isSupplier__c</fullName>
        <label>is Supplier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149597_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_Account_Shippi_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_Account_Shippi_rel</relationshipLabel>
        <relationshipName>rel_1697761149597_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151339_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_AutoPaymentMethodId_map_Vouc_rel</label>
        <referenceTo>ssot__Voucher__dlm</referenceTo>
        <relationshipLabel>Account_AutoPaymentMethodId_map_Vouc_rel</relationshipLabel>
        <relationshipName>rel_1697761151339_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151412_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_BillContactAddressId_map_Con_rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>Account_BillContactAddressId_map_Con_rel</relationshipLabel>
        <relationshipName>rel_1697761151412_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>